<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.privacy_policy.PrivacyPolicyActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.linderaredux.ui.privacy_policy.PrivacyPolicyViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.linderaredux.view.ToolBar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Privacy Policy"
            app:leftDrawable="@drawable/ic_back_arrow" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="29dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/terms_first"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/terms_second"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/terms_third"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/terms_fourth"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/terms_fourth"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/terms_fifth"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/terms_sixth"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/terms_seventh"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/terms_eight"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/terms_ninth"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="67dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/terms_thirteen"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</layout>