<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.linderaredux.ui.login.LoginViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <com.linderaredux.view.ToolBar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            app:leftDrawable="@drawable/ic_back_arrow" />

        <LinearLayout
            android:id="@+id/loginHeaderLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/toolbar"
            android:background="@color/colorPrimary"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_email_and_password"
                android:textColor="@color/white"
                android:textSize="24dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginRegisterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginHeaderLayout"
            android:layout_marginStart="38dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="38dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/white"
                android:padding="16dp"
                android:text="@string/forgot_your_password"
                android:textAllCaps="false" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="20dp"
                android:background="@drawable/register_button_bg"
                android:text="@string/login_CTA"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="16dp"
                android:text="@string/register_for_free_at_lindera"
                android:textAllCaps="false" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/login_button_bg"
                android:text="@string/registration_CTA"
                android:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contactHelpLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@color/white"
                android:padding="16dp"
                android:text="@string/contact_lindera_CTA"
                android:textAllCaps="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@color/white"
                android:padding="16dp"
                android:text="@string/landing_help_faq"
                android:textAllCaps="false" />

        </LinearLayout>

    </RelativeLayout>
</layout>