<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.delete_account.DeleteAccountActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.linderaredux.ui.delete_account.DeleteAccountViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.linderaredux.view.ToolBar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Deleting an account"
            app:leftDrawable="@drawable/ic_back_arrow" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="51dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/delete_account_title"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="31dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/delete_account_paragraph"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:background="@drawable/register_button_bg"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/delete_account_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
</layout>